# LTX-Lora

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: pilot.example.json
docs/: A2V_EXPERIMENT_PLAN.md  CTO_FEASIBILITY_REPORT.md  RAINDEER_VIDEOCLAW_BURGER_REVIEW.md  RAINDEER_VIDEOCLAW_TAKE2.md  RAINDEER_WORKFLOW.md  TEST_PLAN.md
results/: A2V_1000_STEP_QUALITY_REBUILD_EVALUATION.md  A2V_CONTROLLED_DIAGNOSTIC.md  A2V_EXPERIMENT_DECISION_LOG.md  A2V_FULL22B_LOCATION_MATRIX.md  A2V_MANAGED_PILOT.md  A2V_MOUTH_COVERAGE_RETRAIN_EVALUATION.md  EVALUATION.md  LTX23_IC_LORA_SUPPLIED_AUDIO_11S.md
scripts/: build_a2v_bundle.py  capture_fal_price.py  generate.py  inventory.py  issue_a2v_approval.py  migrate_budget_ledger.py  preflight_a2v.py  prepare_dataset.py  prepare_ltx23_tutorial_dataset.py  raindeer.py  record_standing_authorization.py  refresh_a2v_run.py  run_ltx23_fal_pipeline.py  train.py  train_a2v.py  validate_a2v_dataset.py
tests/: test_a2v_broad_dataset.py  test_a2v_bundle.py  test_a2v_dataset.py  test_a2v_execution.py  test_a2v_quality.py  test_a2v_refresh.py  test_artifacts.py  test_authorization.py  test_budget.py  test_dataset_paths.py  test_dataset_selection.py  test_fal_api.py  test_generation.py  test_ltx23_v2.py  test_pilot_ledger.py  test_preflight.py  test_prepare_ltx23_dataset.py  test_privacy.py  test_private_workspace.py  test_provider_validation.py  test_raindeer.py  test_run_a2v_broad_provider.py  test_run_ic_lora_provider.py  test_run_ltx23_pro_a2v.py  test_run_ltx_a2v_lora.py  test_run_ltx_a2v_motion.py  test_staging.py  (+3 more)
(+51 files in other folders)
