[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ltx-character-lora-pilot"
version = "0.1.0"
description = "Budget-capped fal LTX character-LoRA pilot tooling"
requires-python = ">=3.11"
dependencies = [
  "fal-client>=0.7.0",
  "httpx>=0.28.0,<0.29.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
